# our-g

./: .dir-locals.el  Makefile  README.md  README.org  common.h  getting_started.c  notes.org  setup-basestation.sh  setup-mobileunit.sh  tun.c  tun_nrf.c
base_station.d/: opts.h
mobile_unit.d/: opts.h
rf24c/: CMakeLists.txt  rf24c.cpp  rf24c.h
